cabal-version:          2.4
name:                   wasm-pandoc
version:                0.1.0.0
license:                BSD-3-Clause

executable wasm-pandoc
  ghc-options:          -Wall
                        -optl--export-function=convert
  hs-source-dirs:       app
  main-is:              Main.hs
  build-depends:        base
                      , asterius-prelude
                      , pandoc
                      , text
  default-language:     Haskell2010
